Update github link

--- a/index.html
+++ b/index.html
@@ -121,7 +121,10 @@
 
         <div class="copyright">
           <p>
-            This project was coded by
+            <a href="https://github.com/lingjiangx/weatherforcast"
+              >Open-source code</a
+            >
+            by
             <span class="name">Ling Jiang</span>
           </p>
         </div>
