--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
               id="icon"
             />
             <span id="number">12</span>
-            <span id="units"
-              >°C |
-              <a href="#" id="fahrenheit-link">°F</a>
-            </span>
+            <span class="units"
+              ><a href="#" id="celsius-link" class="active">°C</a> |
+              <a href="#" id="fahrenheit-link">°F</a></span
+            >
           </div>
           <div class="col-6">
             <ul>
