--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
       </small>
     </div>
 
-    <script src="src/app.js"></script>
+    <script src="src/index.js"></script>
   </body>
 </html>
