--- a/index.html
+++ b/index.html
@@ -63,6 +63,21 @@
             </ul>
           </div>
         </div>
+        <div class="weather-roll">
+          <div class="row">
+            <div class="col-2">
+              <p>Thur</p>
+              <img
+                src="https://openweathermap.org/img/wn/10d@2x.png"
+                alt="forcast-icon"
+                width="80px"
+              />
+
+              <span class="max-temp">18°</span>
+              <span class="min-temp">12°</span>
+            </div>
+          </div>
+        </div>
       </div>
       <small>
         <a href="https://github.com/lingjiangx/weatherforcast"
