--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             </ul>
           </div>
         </div>
-        <div class="weather-roll">
-          <div class="row">
+        <div class="weather-roll" id="weather-roll">
+          <!-- <div class="row">
             <div class="col-2">
               <p>Thur</p>
               <img
@@ -77,7 +77,7 @@
               <span class="min-temp">12°</span>
             </div>
           </div>
-        </div>
+        </div> -->
       </div>
       <small>
         <a href="https://github.com/lingjiangx/weatherforcast"
